# Multilevel-dpo-feedback

./: .gitignore  AGENTS.md  README.md
implementation/: README.md  pyproject.toml
implementation/audits/: math-final-r2-job13053-labels.jsonl
implementation/configs/: basic_smoke.yaml  deepspeed_zero3.json  dpo_prompt_context_schema.json  pair_validation_1x.yaml  qwen35-native-benchmark-smoke-r3.yaml  qwen35-native-benchmark-smoke.yaml  qwen35-native-benchmark-validation-r4.yaml  qwen35-native-pairs-smoke-v3.yaml  qwen35-native-pairs-smoke.yaml  qwen35-native-smoke.yaml  searchqa.yaml
implementation/scripts/: audit_trajectories.py  run_local_concise_sweep.py  select_bootstrap_pool.py  turing_audit_dataset.sh  turing_basic_pair_generation.sh  turing_bootstrap_rollouts.sh  turing_build_preferences.sh  turing_build_sft.sh  turing_checkpoint_smoke.sh  turing_collect.sh  turing_collect_array.sh  turing_collect_runtime_decision.sh  turing_comparisons.sh  turing_decoding_sweep.sh  turing_download_dataset_source.sh  turing_download_math_source.sh  turing_dpo_after_freeze.sh  turing_evaluate.sh  turing_evaluate_paper.sh  turing_finalize_full_sft.sh  turing_finalize_report.sh  turing_freeze_baseline.sh  turing_freeze_decoding.sh  turing_full_sft.sh  turing_generate.sh  turing_generation_baseline.sh  turing_locate_dataset_row.sh  turing_materialize_dataset.sh  turing_materialize_preflight_subset.sh  turing_merge_bootstrap.sh  turing_merge_collection.sh  turing_merge_evaluations.sh  turing_merge_predictions.sh  turing_model_load_smoke.sh  turing_offline_reuse_check.sh  (+22 more)
(+152 files in other folders)
