[project]
name = "text-feedback-dpo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "accelerate",
  "bitsandbytes",
  "datasets",
  "jinja2",
  "peft",
  "pyyaml",
  "sympy",
  "torch",
  "transformers",
  "trl",
  "zstandard",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
tfdpo = "text_feedback_dpo.cli:main"

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
