[project]
name = "text-feedback-dpo-grpo-environment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "text-feedback-dpo",
  "vllm>=0.24.0",
]

[tool.uv.sources]
text-feedback-dpo = { path = "../..", editable = true }
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
